<resources>
    <string name="app_name">Dots</string>
    <string name="camera_caption">Touch to capture using camera</string>
    <string name="gallery_caption">Touch to proceed to gallery</string>
    <string name="processing">Processing image…</string>
    <string name="translate">Translating image…</string>
    <string name="capturing">Capturing image…</string>
    <string name="processing_error">An error occurred during processing :-(</string>
    <string name="translate_error">An error occurred during translation :-(</string>
    <string name="okay">Okay</string>
    <string name="confirm_delete">Are you sure you want to delete this document?</string>
    <string name="confirm_cancel_processing">Are you sure you want to cancel translation?</string>
    <string name="confirm_cancel_translate">Are you sure you do not want to save
        translation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help">Help Me</string>
    <string name="acquire">1 Acquire an image</string>
    <string name="camera">This button allows the user to use the camera in capturing an image of a
        Braille document.</string>
    <string name="gallery">This button enables the user to retrieve an image of a Braille document
        from the gallery.</string>
    <string name="crop">2 Crop the acquired image</string>
    <string name="crop_sub">After acquiring an image, the app lets the user to define exactly
        which area of the image is desired to be translated.</string>
    <string name="preprocessing">3 Confirm the preprocessed image</string>
    <string name="preprocessing_sub">Once cropped, the image is subjected to a preprocessing
        phase to make translation easier. The preprocessed image is displayed after which and the
        app will ask the user to confirm if it was done properly.</string>
    <string name="translation">4 Confirm to save translation</string>
    <string name="translation_sub">The translation phase will start post confirmation of the
        preprocessed image. After then, the app will ask confirmation from the user to save the
        translation or not.</string>
    <string name="delete">Delete</string>
    <string name="letters">Letters</string>
    <string name="numbers">Numbers</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="one_b">$1</string>
    <string name="two_b">$2</string>
    <string name="three_b">$3</string>
    <string name="four_b">$4</string>
    <string name="five_b">$5</string>
    <string name="six_b">$6</string>
    <string name="seven_b">$7</string>
    <string name="eight_b">$8</string>
    <string name="nine_b">$9</string>
    <string name="zero_b">$0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="lighting_tip">I work best with natural light as the light source. I cannot process
        documents if it is too bright or too dark.</string>
    <string name="capture_tip">You should try capturing an image of the document in an upright
        manner perpendicular to the device. The accelerometer guide in the camera interface can
        help you with that.</string>
    <string name="size_tip">For now, I am only designed to translate Braille embossed on paper of
        letter size (8.5" x 11").</string>
    <string name="input_tip">You should make sure that the document is not captured zoomed and
        instead, enclosed by the rectangular guide in the camera interface.</string>
    <string name="skew_tip">I cannot efficiently process documents that are too tilted or
        distorted.</string>
    <string name="crop_tip">When cropping, make sure that all background objects outside the page
        are removed. Also, try to pattern the cropping box on the shape of the document.</string>
    <string name="material_tip">I was not designed to translate Braille engraved on metallic
        objects.</string>
</resources>
