<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/instructions_padding"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acquire"
            android:textSize="@dimen/instructions_title_size"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_margin_v"
            android:layout_marginStart="@dimen/instructions_margin_h"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/instructions_icon_hw"
                android:layout_height="@dimen/instructions_icon_hw"
                android:layout_marginStart="@dimen/instructions_icon_margin"
                android:layout_marginEnd="@dimen/instructions_icon_margin"
                android:padding="@dimen/instructions_image_padding"
                android:src="@mipmap/ic_camera"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/instructions_margin_h"
                android:layout_gravity="center_vertical"
                android:text="@string/camera"
                android:textSize="@dimen/instructions_caption_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_margin_v"
            android:layout_marginStart="@dimen/instructions_margin_h"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/instructions_icon_hw"
                android:layout_height="@dimen/instructions_icon_hw"
                android:layout_marginStart="@dimen/instructions_icon_margin"
                android:layout_marginEnd="@dimen/instructions_icon_margin"
                android:padding="@dimen/instructions_image_padding"
                android:src="@mipmap/ic_gallery"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/instructions_margin_h"
                android:layout_gravity="center_vertical"
                android:text="@string/gallery"
                android:textSize="@dimen/instructions_caption_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_title_margin"
            android:text="@string/crop"
            android:textSize="@dimen/instructions_title_size"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_margin_v"
            android:layout_marginStart="@dimen/instructions_margin_h"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/instructions_image_hw"
                android:layout_height="@dimen/instructions_image_hw"
                android:src="@mipmap/im_crop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/instructions_margin_h"
                android:text="@string/crop_sub"
                android:textSize="@dimen/instructions_caption_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_title_margin"
            android:text="@string/preprocessing"
            android:textSize="@dimen/instructions_title_size"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_margin_v"
            android:layout_marginStart="@dimen/instructions_margin_h"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/instructions_image_hw"
                android:layout_height="@dimen/instructions_image_hw"
                android:src="@mipmap/im_preprocess"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/instructions_margin_h"
                android:text="@string/preprocessing_sub"
                android:textSize="@dimen/instructions_caption_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_title_margin"
            android:text="@string/translation"
            android:textSize="@dimen/instructions_title_size"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/instructions_margin_v"
            android:layout_marginStart="@dimen/instructions_margin_h"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/instructions_image_hw"
                android:layout_height="@dimen/instructions_image_hw"
                android:src="@mipmap/im_translation"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/instructions_margin_h"
                android:text="@string/translation_sub"
                android:textSize="@dimen/instructions_caption_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
