<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tips_padding"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_proceed"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tips_margin_h"
                android:layout_gravity="center_vertical"
                android:text="@string/size_tip"
                android:textSize="@dimen/tips_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tips_margin_v"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_proceed"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/capture_tip"
                android:textSize="13sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tips_margin_v"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_proceed"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/input_tip"
                android:textSize="13sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tips_margin_v"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_proceed"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/crop_tip"
                android:textSize="13sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tips_margin_v"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_cancel"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tips_margin_h"
                android:layout_gravity="center_vertical"
                android:text="@string/lighting_tip"
                android:textSize="@dimen/tips_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tips_margin_v"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_cancel"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tips_margin_h"
                android:layout_gravity="center_vertical"
                android:text="@string/skew_tip"
                android:textSize="@dimen/tips_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tips_margin_v"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/tips_icon_hw"
                android:layout_height="@dimen/tips_icon_hw"
                android:padding="@dimen/tips_icon_padding"
                android:src="@mipmap/ic_cancel"
                android:scaleType="centerInside"
                android:background="@drawable/circular_button_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tips_margin_h"
                android:layout_gravity="center_vertical"
                android:text="@string/material_tip"
                android:textSize="@dimen/tips_size"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>